--- a/signup.html
+++ b/signup.html
@@ -9,10 +9,10 @@
 
 <header>
     <div class="logo-container">
-        <img src="images/odin-lined.png">
+        <img class="logo-img" src="images/odin-lined.png">
         <span>ODIN</span>
     </div>
-    <img class="bg-img" src="images/leaves.avif">
+    <p class="logo-footer">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></p>
 </header>
 
 <main>
